fix(list.scss): table overflow fix

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -203,6 +203,7 @@
 	border: 1px solid #bbb;
 	min-height: 60px;
 	margin-left: -1px;
+	overflow: hidden;
 
 
 	a {
